# Get-Work-Done

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
hooks/: pre-commit
include/: Backlog.h  Date.h  Done.h  Ongoing.h  Stage.h  Task.h  Today.h  application.h  backlog.h  date.h  done.h  ongoing.h  stage.h  task.h  today.h
src/: Backlog.cpp  Date.cpp  Date.h  Done.cpp  Done.h  Makefile  Ongoing.cpp  Ongoing.h  Stage.cpp  Stage.h  Task.cpp  Task.h  Today.cpp  Today.h  application.cpp  backlog.cpp  date.cpp  done.cpp  get_work_done  input.cpp  main.cpp  ongoing.cpp  stage.cpp  task.cpp  today.cpp
